# local-image-generator-service

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.override.yml.example  docker-compose.yml  pyproject.toml
app/: __init__.py  auth.py  errors.py  logging_config.py  main.py  validation.py
app/api/: health.py  images.py  loras.py  models.py
app/backends/: base.py  comfyui.py
app/loras/: __init__.py  civitai.py  civitai_url.py  eviction.py  scanner.py
app/middleware/: logging.py
app/queue/: fetches.py  fetches_recovery.py  jobs.py  reaper.py  recovery.py  store.py  worker.py
app/registry/: models.py  workflows.py
app/storage/: s3.py
config/: models.yaml
docker/: entrypoint.sh
docker/comfyui/: Dockerfile  custom-nodes.txt  entrypoint.sh
docker/comfyui-placeholder/: default.conf
docs/architecture/: image-gen-service.md
docs/plans/: 2026-04-18-image-gen-service-build.md  2026-04-19-cycle-1-tasks.md  2026-04-19-cycle-2-tasks.md  2026-04-19-cycle-3-tasks.md  2026-04-19-cycle-4-tasks.md  2026-04-19-cycle-5-plan.md  2026-04-19-cycle-6-plan.md
docs/session/: HANDOFF.md  SESSION.md
docs/specs/: 2026-04-19-cycle-1-fastapi-auth-sqlite-logging.md  2026-04-19-cycle-2-comfyui-sidecar-adapter.md  2026-04-19-cycle-3-s3-registry-sync-endpoint.md  2026-04-19-cycle-4-queue-disconnect-reaper-recovery.md  2026-04-19-cycle-5-lora-scanner-injection.md  2026-04-19-cycle-6-civitai-fetcher.md
migrations/: 001_init.sql  002_fetched_at.sql  003_lora_fetches.sql
scripts/: workflow-gate.sh
tests/: conftest.py  test_anchor_resolver.py  test_auth.py  test_civitai_fetch.py  test_civitai_url_parser.py  test_comfyui_adapter.py  test_disconnect.py  test_fetches_endpoint.py  test_fetches_recovery.py  test_fetches_store.py  test_graph_injection.py  test_health.py  test_image_get.py  test_job_store.py  test_logging.py  test_lora_eviction.py  test_lora_scanner.py  test_loras_endpoint.py  test_model_registry.py  test_models_endpoint.py  test_orphan_reaper.py  test_path_traversal.py  test_queue_worker.py  test_restart_recovery.py  test_s3_storage.py  test_sync_endpoint.py  test_validation.py
tests/integration/: test_civitai_real.py  test_comfyui_adapter.py  test_e2e_sync.py  test_lora_effect.py
workflows/: sdxl_eps.json
